--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ boto3==1.34.69
 datasets==2.17.1
 dill==0.3.8
 einops==0.7.0
-gluonts[torch]==0.15.1
+gluonts[torch]>=0.15.1
 jaxtyping==0.2.29
 mypy==1.11.1
 pandas==2.2.3
